--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       border-radius: 20px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
       text-align: center;
-      max-width: 600px;
+      max-width: 700px;
       transition: all 0.5s ease-in-out;
     }
 
@@ -73,7 +73,7 @@
 <div class="intro" id="introBox">
   <h2>Hi Zeeshan 👋</h2>
   <p>I want to say you something...</p>
-  <button class="btn btn-custom mt-3" onclick="showWish()">Click to Reveal 🎁</button>
+  <button class="btn btn-custom mt-3" onclick="showWish()">Click Here 🎁</button>
 </div>
 
 <div class="wish hidden" id="wishBox">
@@ -86,19 +86,19 @@
   const messageLines = [
   "You are not just my friend... you're my blessing... ✨",
   "Dur ho... lekin dil ky sab sy kareeb ho... 💌",
-  "Hmasha muskuraty raho, har din nayi umeedon se bhara ho... ☀️",
+  "Hmasha muskuraty raho, har din nayi umeedon sy bhara ho... ☀️",
   "Tum jiyo hazaron saal... 🎉",
   "Duniya ki har khushi tumhary kadmon mein ho... 🌍",
   "Kamyabi tumhara pehchaan ban jaye... 💼",
   "Har manzil tumhary liye asaan ho, har raasta roshan ho... 🌟",
   "Allah taala tumhein har gham, har takleef sy mehfooz rakhay... 🕊️",
-  "Tmhy kabhi koi gham chhoo na saky, koi garam hawa bhi na lage... 🤍",
+  "Tmhy kabhi koi gham chhoo na saky, koi garam hawa bhi na lagy... 🤍",
   "Allah tumhein ilm, samajh or hikmat sy nawazay...📖",
   "Tumhara har din barkat bhara ho, or har raat sukoon wali ho... 🌙",
   "Rizq mein izafa ho, sehat mein barkat ho, or har mushkil asaan ho... 💫",
-  "Tumhein duniya ki har ni’mat naseeb ho, or akhirat mein bhi kamiyabi mily 🌸",
+  "Tumhein duniya ki har ni’mat naseeb ho, or akhirat mein bhi kamiyabi mily... 🌸",
   "Ameen SumAmeen... 🤲",
-  "Happy Birthday Zeeshan! 🥳"
+  "Happy Birthday Zeeshan! 🎂"
 ];
 
 
