--- a/index.html
+++ b/index.html
@@ -1,106 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Birthday Wish for Zeeshan</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Yaadein - Zeeshan</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      /* background: linear-gradient(135deg, #fbc2eb, #a6c1ee); */
-      /* background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); */
-      /* background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d); */
-      background: linear-gradient(to right, #000428, #004e92);
-
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
+      /* background: linear-gradient(to right, #0f2027, #203a43, #2c5364); */
+      /* background: linear-gradient(to right, #000428, #004e92); */
+      background: linear-gradient(to right, #00042800, #004e926e);
+      color: rgb(0, 0, 0);
       font-family: 'Segoe UI', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 30px;
     }
-
-    .intro, .wish {
-      background-color: white;
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    .hidden {
+      display: none !important;
+    }
+    .intro, .memory-box, .wish {
       text-align: center;
-      max-width: 700px;
-      transition: all 0.5s ease-in-out;
+      background-color: rgba(255, 255, 255, 0.08);
+      padding: 30px;
+      border-radius: 15px;
+      max-width: 600px;
+      width: 100%;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
     }
-
-    .intro h2 {
-      color: #333;
-      margin-bottom: 20px;
-    }
-
     .btn-custom {
-      background-color: #004e92;
-      color: white;
-      border: none;
-      padding: 12px 25px;
-      font-size: 1rem;
-      border-radius: 30px;
-      transition: 0.3s;
+      background-color: #ffffff;
+      color: #203a43;
+      font-weight: bold;
     }
-
     .btn-custom:hover {
-      background-color: #004e92;
+      background-color: #cccccc;
     }
-
-    .typewriter {
-      display: inline-block;
-      border-right: 2px solid black;
-      white-space: nowrap;
-      overflow: hidden;
-      font-size: 1.3rem;
-      color: #444;
-      min-height: 80px;
+    /* .memory-img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin: 20px 0;
+      border: 2px solid #fff;
+    } */
+    .btn-next {
+      margin-top: 20px;
+      background-color: #ffffff;
+      color: #203a43;
+      font-weight: bold;
     }
-
+    .btn-next:hover {
+      background-color: #d1d1d1;
+    }
     .balloons {
       font-size: 2rem;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+    }
+    .typewriter {
+      border-right: 2px solid #fff;
+      display: inline-block;
+      overflow: hidden;
+      white-space: nowrap;
+      animation: blink 0.7s steps(1) infinite;
+      margin-top: 10px;
+      font-size: 1.1rem;
+    }
+    @keyframes blink {
+      50% { border-color: transparent; }
+    }
+    /* .memory-img {
+  width: 100%;
+  max-height: 300px; 
+  object-fit: cover; 
+  border-radius: 10px;
+  margin: 20px 0;
+  border: 2px solid #fff;
+} */
+    .memory-img {
+      width: 100%;
+      max-height: 300px;
+      object-fit: contain; /* keeps full image visible */
+      border-radius: 10px;
+      margin: 20px 0;
+      /* border: 2px solid #fff; */
+      background-color: #ffffff00; /* optional to avoid transparency issues */
     }
 
-    .hidden {
-      display: none;
-    }
   </style>
 </head>
 <body>
 
+<!-- Intro Section -->
 <div class="intro" id="introBox">
   <h2>Hi Zeeshan 👋</h2>
   <p>I want to say you something...</p>
-  <button class="btn btn-custom mt-3" onclick="showWish()">Click Here 🎁</button>
+  <button class="btn btn-custom mt-3" onclick="showMemories()">Click Here 🎁</button>
 </div>
 
+<!-- Memory Section -->
+<div class="memory-box hidden" id="memoriesSection">
+  <div id="topText" class="mb-3 fs-5"></div>
+  <img id="memoryImage" class="memory-img" src="" alt="memory image" />
+  <div id="bottomText" class="fs-6"></div>
+  <button id="nextBtn" class="btn btn-next">Next ➤</button>
+</div>
+
+<!-- Birthday Wish Section -->
 <div class="wish hidden" id="wishBox">
-  <div class="balloons">🎈🎉🎂🎁</div>
-  <h3>Happy Birthday Zeeshan</h3>
+  <!-- <div class="balloons">🎈🎉🎂🎁</div> -->
+  <h3>For You</h3>
   <div class="typewriter" id="typewriterText"></div>
 </div>
 
+<!-- JavaScript Logic -->
 <script>
+  function showMemories() {
+    document.getElementById("introBox").classList.add("hidden");
+    document.getElementById("memoriesSection").classList.remove("hidden");
+  }
+
+  const memories = [
+    {
+      top: "Hamari mulaqat ek Facebook group 'Haseen Log' mein hui...",
+      img: "img/m1.jpg",
+      bottom: "Woh choti choti comments... jaisy kisi kahani ka shuru hona."
+    },
+    {
+      top: "Messenger group bana... tum, main or meri 2 dostien...",
+      img: "img/memory2.jpeg",
+      bottom: "Group ki baatein, hansi mazaak... sab yaadgar ban gaya..."
+    },
+    {
+      top: "2020 Ramzan mein Ludo, pubg or roz contact...",
+      img: "img/ludo.jpg",
+      bottom: "Roz roz baatein or strong bonding..."
+    },
+    {
+      top: "Mera tmhy stories sunna",
+      img: "img/story.jpg",
+      bottom: "Tm intrested ni hoty thy phr b interest show krwaty thy..."
+    },
+    {
+      top: "Our Nick Names",
+      img: "img/names.jpg",
+      bottom: "Hm ek dusry ko phly uncle aunty kehty thy phr jin churail etc..."
+    },
+    {
+      top: "Har mushkil waqt mein tum saath thay...",
+      img: "img/support.jpg",
+      bottom: "Baba ki death, mood swings... tum kabhi nahi gaye."
+    },
+    {
+      top: "We are much same",
+      img: "img/zeenab.jpg",
+      bottom: "Itna acha time ek sth duzara hai, acha b or bura b... tm ny kbi sth nai chora...."
+    }
+    ,
+    {
+      top: "Thank You",
+      img: "img/thnakyou.png",
+      bottom: "Itna saath dyny k liye thnk you..."
+    }
+  ];
+
+  let currentIndex = 0;
+
+  function showMemory(index) {
+    const mem = memories[index];
+    document.getElementById("topText").textContent = mem.top;
+    document.getElementById("memoryImage").src = mem.img;
+    document.getElementById("bottomText").textContent = mem.bottom;
+  }
+
+  document.getElementById("nextBtn").addEventListener("click", () => {
+    currentIndex++;
+    if (currentIndex < memories.length) {
+      showMemory(currentIndex);
+    } else {
+      // Show Wish
+      document.getElementById("memoriesSection").classList.add("hidden");
+      document.getElementById("wishBox").classList.remove("hidden");
+      setTimeout(type, 1000);
+    }
+  });
+
+  showMemory(currentIndex);
+
   const messageLines = [
   "You are not just my friend... you're my blessing... ✨",
-  "Dur ho... lekin dil ky sab sy kareeb ho... 💌",
-  "Hmasha muskuraty raho, har din nayi umeedon sy bhara ho... ☀️",
-  "Tum jiyo hazaron saal... 🎉",
-  "Duniya ki har khushi tumhary kadmon mein ho... 🌍",
-  "Kamyabi tumhara pehchaan ban jaye... 💼",
-  "Har manzil tumhary liye asaan ho, har raasta roshan ho... 🌟",
-  "Allah taala tumhein har gham, har takleef sy mehfooz rakhay... 🕊️",
-  "Tmhy kabhi koi gham chhoo na saky, koi garam hawa bhi na lagy... 🤍",
-  "Allah tumhein ilm, samajh or hikmat sy nawazay...📖",
-  "Tumhara har din barkat bhara ho, or har raat sukoon wali ho... 🌙",
-  "Rizq mein izafa ho, sehat mein barkat ho, or har mushkil asaan ho... 💫",
-  "Tumhein duniya ki har ni’mat naseeb ho, or akhirat mein bhi kamiyabi mily... 🌸",
+  "Dur ho... lekin dil ky sab sy kareeb ho...",
+  "Hmasha muskuraty raho, har din nayi umeedon sy bhara ho...",
+  "Tum jiyo hazaron saal...",
+  "Duniya ki har khushi tumhary kadmon mein ho...",
+  "Kamyabi tumhari pehchaan ban jaye...",
+  "Har manzil tumhary liye asaan ho, har raasta roshan ho...",
+  "Allah taala tumhein har gham, har takleef sy mehfooz rakhay...",
+  "Tmhy kabhi koi gham chhoo na saky, koi garam hawa bhi na lagy...",
+  "Tumhara har din barkat bhara ho, or har raat sukoon wali ho... ",
+  "Rizq mein izafa ho, sehat mein barkat ho, or har mushkil asaan ho... ",
+  "Tumhein duniya ki har ni’mat naseeb ho, or akhirat mein bhi kamiyabi mily... ",
   "Ameen SumAmeen... 🤲",
   "Happy Birthday Zeeshan! 🎂"
-];
-
+  ];
 
   let i = 0, j = 0, isDeleting = false;
   let currentText = "";
@@ -114,7 +218,7 @@
         setTimeout(type, 100);
       } else if (!isDeleting) {
         isDeleting = true;
-        setTimeout(type, 2000);
+        setTimeout(type, 1500);
       } else if (isDeleting && j >= 0) {
         currentText = messageLines[i].substring(0, j--);
         typeTarget.innerHTML = currentText;
@@ -122,15 +226,10 @@
       } else {
         isDeleting = false;
         i++;
+        j = 0;
         setTimeout(type, 500);
       }
     }
-  }
-
-  function showWish() {
-    document.getElementById("introBox").classList.add("hidden");
-    document.getElementById("wishBox").classList.remove("hidden");
-    setTimeout(type, 1000);
   }
 </script>
 
